--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "node serevr.js",
     "server": "nodemon server.js",
-    "client":"npm start --prefix ./client",
+    "client": "npm start --prefix ./client",
     "dev": "concurrently \"npm run server\" \"npm run client\""
   },
   "author": "techinfoyt",
@@ -20,6 +20,7 @@
     "express": "^4.18.2",
     "mongoose": "^6.10.0",
     "morgan": "^1.10.0",
+    "nodemailer": "^6.9.3",
     "nodemon": "^2.0.20"
   }
 }
