--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "blog app",
   "main": "server.js",
   "scripts": {
-    "start": "node serevr.js",
+    "start": "node server.js",
+    "build": "echo 'No build steps specified'",
     "server": "nodemon server.js",
     "client": "npm start --prefix ./client",
     "dev": "concurrently \"npm run server\" \"npm run client\""
